# pktai

./: README.md  pyproject.toml  summary.md
src/pktai_tui/: app.py
src/pktai_tui/services/: __init__.py  capture.py  config.py
src/pktai_tui/ui/: __init__.py  settings.py
src/pktai_wireshark_tui/: __init__.py  app.py
