[project]
name = "pktai-tui"
version = "0.1.0"
description = "AI-assisted packet analysis in your terminal 🚀🤖📦💻"
authors = [
  { name = "pktai" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "textual>=0.52.0",
  "pyshark>=0.6.0",
  "textual-fspicker>=0.4.0"
]

[project.scripts]
pktai = "pktai_tui.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# uv will use this pyproject for dependency resolution

[tool.hatch.build.targets.wheel]
packages = ["src/pktai_tui"]
